--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,4 @@
 @import url("./components/Header/Header.css");
 @import url("./components/Sidebar/Sidebar.css");
 @import url("./components/Main/Main.css");
+@import url("./components/Calendar/Calendar.css");
