--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,8 @@
 @import url("./components/Sidebar/Sidebar.css");
 @import url("./components/Main/Main.css");
 @import url("./components/Calendar/Calendar.css");
+@import url("./components/Lists/Lists.css");
+@import url("./components/Popup/TaskCreate.css");
+@import url("components/Popup/TaskMenu.css");
+@import url("./components/Popup/TaskView.css");
+@import url("./components/Analytics/AnalyticsPage.css");
