--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -73,11 +73,34 @@
   font-size: 18px;
 }
 
-.main__hashtag {
-  background-color: #0029FF;
-  color: #fff;
-  width: 150px;
+.main__tag {
   text-align: center;
-  padding: 10px 0;
+  padding: 5px 10px;
   border-radius: 10px;
+  margin-right: 10px;
+  border: 1px solid black;
+}
+
+.action-buttons {
+  top: 0;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1001; /* Ensure it's above other elements */
+}
+
+.action-buttons button {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+.action-buttons button:hover {
+  background: #f0f0f0;
 }
