--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -48,25 +48,27 @@
 .header__dropdown {
   position: absolute;
   top: 60px;
-  right: 0;
+  right: 0px;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
   min-width: 200px;
-  z-index: 1000;
+  z-index: 9999999;
 }
 
 .header__dropdown ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  z-index: 9999999;
 }
 
 .header__dropdown li {
   padding: 8px 12px;
   border-bottom: 1px solid #eee;
+  z-index: 9999999;
 }
 
 .header__dropdown li:last-child {
@@ -87,3 +89,5 @@
   padding: 2px 6px;
   font-size: 12px;
 }
+
+
