--- a/client/src/components/Lists/Lists.css
+++ b/client/src/components/Lists/Lists.css
@@ -3,9 +3,13 @@
   background-color: #F9F9F9;
   border-radius: 20px;
   box-sizing: border-box;
-  padding: 30px 20px 20px 20px;
+  padding: 10px 20px 20px 20px;
   gap: 15px;
   display: flex;
+}
+
+h1 {
+  font-size: 40px;
 }
 
 .main-content {
@@ -49,7 +53,7 @@
 }
 
 .list-item span {
-  font-size: 1rem;
+  font-size: 30px;
   font-weight: 500;
 }
 
@@ -65,9 +69,13 @@
 }
 
 .delete-list-button {
-  background-color: #ccc; /* Light Grey for delete */
+  background-color: #ff4d4f;
   font-size: 0.8rem;
   padding: 6px 10px;
+}
+
+.delete-list-button:hover {
+  filter: brightness(85%);
 }
 
 /* Options Menu (Three Dots) */
