--- a/client/src/components/Popup/TaskView.css
+++ b/client/src/components/Popup/TaskView.css
@@ -1,4 +1,4 @@
-.task-view-popup {
+.popup-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -10,12 +10,136 @@
   align-items: center;
 }
 
-.task-view-content {
-  background: white;
+.task-view-popup {
+  background: #fff;
   padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  position: relative;
+}
+
+.task-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.task-form input,
+.task-form select,
+.task-form textarea {
+  width: 90%;
+  padding: 8px;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
-  max-height: 80%;
-  overflow-y: auto;
+}
+
+.task-form input[type="date"]{
+  width: 30%;
+}
+
+.tags-container {
+  margin-bottom: 10px;
+}
+
+.task-tag {
+  display: inline-block;
+  background: #f0f0f0;
+  padding: 5px 10px;
+  margin-right: 5px;
+  border-radius: 5px;
+}
+
+.submit-button {
+  background-color: #ffcc00;
+  border: none;
+  padding: 10px 20px;
+  width: 100%;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.tags-button {
+  background-color: #ffcc00;
+  border: none;
+  padding: 10px 20px;
+  width: 30%;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.tags-button:hover {
+  background-color: #e1b307;
+}
+
+.tags-delete-button {
+  background-color: #ff4d4f;
+  border: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.tags-delete-button:hover {
+  filter: brightness(90%);
+}
+
+.delete-button {
+  background-color: #ff4d4f;
+  border: none;
+  padding: 10px 20px;
+  width: 100%;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  filter: brightness(90%);
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  background-color: #ffcc00;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.close-button:hover {
+  background-color: #e1b307;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.input-group {
+  width: 48%; /* Make sure inputs take half of the available space */
+}
+
+.task-form input[type="date"],
+.task-form select {
+  width: 85%;
+}
+
+.task-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.task-view-popup {
+  width: 450px; /* Adjusted width to fit the new layout */
 }
