--- a/client/src/components/Popup/SubtasksPane.css
+++ b/client/src/components/Popup/SubtasksPane.css
@@ -3,8 +3,8 @@
 }
 
 .subtasks-list {
-  max-height: 100px; /* Fixed height */
-  overflow-y: auto; /* Enables scrolling when the list exceeds the height */
+  max-height: 100px;
+  overflow-y: auto;
   border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 15px;
@@ -20,7 +20,7 @@
   border-bottom: 1px solid #ddd;
 }
 
-.subtask-item input[type="checkbox"]{
+.subtask-item input[type="checkbox"] {
   width: 25px;
   height: 25px;
   cursor: pointer;
@@ -31,12 +31,12 @@
   position: relative;
 }
 
-.subtask-item input[type="checkbox"]:checked{
+.subtask-item input[type="checkbox"]:checked {
   background-color: #f7b500;
   border-color: #f7b500;
 }
 
-.st-delete{
+.st-delete {
 
 }
 
