--- a/client/src/components/Lists/Lists.css
+++ b/client/src/components/Lists/Lists.css
@@ -36,6 +36,11 @@ h1 {
   border-radius: 15px;
 }
 
+
+.add-list-button:hover {
+  background-color: #e1b307;
+}
+
 .lists-container {
   display: flex;
   flex-direction: column;
@@ -51,6 +56,10 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.list-item:hover {
+  box-shadow: 0 0 1px 1px black;
 }
 
 .list-item span {
@@ -85,3 +94,4 @@ h1 {
   color: #888;
   cursor: pointer;
 }
+
