--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -111,7 +111,7 @@
 .dropdown_button {
   display: block;
   background-color: #FABB18;
-  color: #000;
+  color: white;
   text-align: center;
   padding: 10px 15px;
   border-radius: 5px;
